# minesweeper

./: .gitignore  README.md
media/: Atlas.ppm
src/: CMakeLists.txt  game.c  image.c  image.h  minesweeper.c  minesweeper.h  surface.c  view.h
src/platform/: xmain.c  xview.c
